--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,6 @@
 {
-
-
     "short_name": "Twittor",
-    "name": "Twittor para heroes",
+    "name": "Twittor para héroes",
     "start_url": "index.html",
     "background_color": "#3498db",
     "theme_color": "#3498db",
